syntax = "proto3";

package proto_broker_msgs;
option csharp_namespace = "ProtoBrokerMsgs";

message ServerMessage {
    enum Cmd {
        Check = 0;
        Uncheck = 1;
        Switch = 2;
    }

    Cmd command = 1;
    string body = 2;
    
}

message IoTMessage {
    string id_device = 1;
    float temperature = 2;
    float humidity = 3;
    float pressure = 4;
}

message SampleMessage {
  oneof test_oneof {
    string name = 4;
    string sub_message = 9;
  }
}
